# semi-ranker-2

./: .gitignore  README.md  pyproject.toml
config/: default.json
src/edgar_chip_screener/: __init__.py  cli.py  config.py  default_config.json  download.py  facts.py  fmp.py  screen.py  sec_zip.py  submissions.py
tests/: conftest.py  test_fmp.py  test_screen.py  test_sec_zip.py
